[gd_scene load_steps=12 format=3 uid="uid://d2b8n34aweq4h"]

[ext_resource type="Script" path="res://Entities/Player/scripts/controller.gd" id="1_d8ygf"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/player_state_machine.gd" id="2_d1gut"]
[ext_resource type="PackedScene" uid="uid://b030h6p4i236u" path="res://Assets/Models/HUD Models/Tablet/tablet3.0.glb" id="3_8ihjg"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/IdlePlayerState.gd" id="3_10uix"]
[ext_resource type="PackedScene" uid="uid://dhhhrlu68xx1a" path="res://Assets/UI/UI.tscn" id="3_35l5b"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/WalkingPlayerState.gd" id="4_fodp0"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/JumpingPlayerState.gd" id="5_65duw"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/FallingPlayerState.gd" id="6_gvqp7"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/NoclippingPlayerState.gd" id="7_pwn5c"]
[ext_resource type="Script" path="res://Entities/Player/scripts/PlayerStates/DeadPlayerState.gd" id="10_mlly4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lrrek"]
height = 2.2

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_d8ygf")
head_tilt_amount = 1.5
gravity = 12.0
ground_friction = 5.0

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.856085, 0)
shape = SubResource("CapsuleShape3D_lrrek")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64939, 0)

[node name="CameraSmooth" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/CameraSmooth"]
unique_name_in_owner = true

[node name="tablet3_0" parent="Head/CameraSmooth/Camera3D" instance=ExtResource("3_8ihjg")]
transform = Transform3D(0.300092, 0, -0.310755, 0, 0.395, 0, 0.310755, 0, 0.300092, -0.23, -0.545, -0.88)
visible = false

[node name="Ui" parent="Head/CameraSmooth/Camera3D" instance=ExtResource("3_35l5b")]
transform = Transform3D(0.902585, 0, -0.430511, 0, 1, 0, 0.430511, 0, 0.902585, 0.395, -0.29, -0.625)
visible = false

[node name="StairsAheadRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.674925, -0.83246)

[node name="StairsBelowRayCast" type="RayCast3D" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_d1gut")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_10uix")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_fodp0")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_65duw")
jump_velocity = 8.0

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_gvqp7")

[node name="NoclippingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_pwn5c")

[node name="DeadPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_mlly4")

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
